--- a/pesde.toml
+++ b/pesde.toml
@@ -15,4 +15,4 @@ lib = "src/init.luau"
 default = "https://github.com/pesde-pkg/index"
 
 [dependencies]
-future = { name = "yetanotherclown/luau_futures", target = "luau", version = "2.0.0-beta.3" }
+futures = { repo = "https://github.com/lune-utils/futures", rev = "6ce822d" }
